<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/avatar" />

    <LinearLayout
        android:id="@+id/ll_name_and_chips"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/john_doe"
                android:textSize="18sp"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/sf_ui_display_bold" />
            <androidx.emoji.widget.EmojiTextView
                android:id="@+id/iv_emoji"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"/>
        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/scrollview_chips_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toEndOf="@+id/iv_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_display_name">
            <LinearLayout
                android:id="@+id/ll_chips_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </HorizontalScrollView>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_created_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/created_date"
        android:textColor="@color/grey"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:layout_marginHorizontal="12dp"
        android:fontFamily="@font/sf_ui_display_medium"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_name_and_chips" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_updated_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/created_date"
        android:textColor="@color/grey"
        android:layout_marginHorizontal="12dp"
        android:textSize="15sp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sf_ui_display_medium"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_created_date" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey_5"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_updated_date" />

</androidx.constraintlayout.widget.ConstraintLayout>